# aiuserOAI-Claude

./: .gitignore  .pre-commit-config.yaml  LICENSE  MIGRATION.md  README.md  TROUBLESHOOTING.md  __init__.py  info.json  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  release.yml  tests.yml
gpt5assistant/: __init__.py  cog.py  config_schemas.py  dispatcher.py  errors.py  messages.py  openai_client.py
gpt5assistant/tools/: __init__.py  code_interpreter.py  file_search.py  image.py  web_search.py
gpt5assistant/utils/: __init__.py  batch_processor.py  conversation.py  discord_io.py  variables.py  voice.py
tests/: __init__.py  conftest.py
tests/integration/: test_cog_integration.py
tests/unit/: test_discord_io.py  test_dispatcher.py  test_errors.py  test_messages.py  test_openai_client.py
